executor-application/configs/src/main/resources/distr/openshift/istio/config/egress/egress-mtls-iagmm-dsr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-mtls-router-executor-iagmm-unver
spec:
  exportTo:
    - .
  host: ${router-executor.ose.istio.egress.common.nlb_mm-host}
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: ${router-executor.ose.istio.egress.common.nlb_mm-port}
        tls:
          caCertificates: /etc/istio/egressgateway-ca-certs/root.crt
          clientCertificate: /etc/istio/egressgateway-certs/tls.crt
          mode: MUTUAL
          privateKey: /etc/istio/egressgateway-certs/tls.key
          sni: ${router-executor.ose.istio.egress.common.nlb_mm-host}
  workloadSelector:
    matchLabels:
      app: istio-egressgateway-router-executor-unver
      istio: egressgateway-router-executor-unver
