executor-application/configs/src/main/resources/distr/openshift/istio/config/egress/egress-mtls-iagmm-se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: egressgateway-mtls-router-executor-iagmm-unver
spec:
  exportTo:
    - .
  hosts:
    # Хост должен быть только 1 в списке
    - ${router-executor.ose.istio.egress.common.nlb_mm-host}
  location: MESH_EXTERNAL
  ports:
    - name: http
      number: ${router-executor.ose.istio.egress.common.internal-port}
      protocol: HTTP
    - name: https-iagmm
      number: ${router-executor.ose.istio.egress.common.nlb_mm-port}
      protocol: HTTPS
  resolution: DNS
