executor-application/configs/src/main/resources/distr/openshift/istio/config/egress/egress-mtls-iagmm-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egressgateway-mtls-router-executor-iagmm-unver
spec:
  exportTo:
    - .
  gateways:
    - egressgateway-mtls-router-executor-unver
    - mesh
  hosts:
    - ${router-executor.ose.istio.egress.common.nlb_mm-host}
  http:
    - match:
        - gateways:
            - mesh
          port: ${router-executor.ose.istio.egress.common.internal-port}
      route:
        - destination:
            host: egressgateway-router-executor-unver
            port:
              number: ${router-executor.ose.istio.egress.common.internal-port}
          headers:
            request:
              remove:
                - x-envoy-peer-metadata
          weight: 100
      retries:
        attempts: 0
    - match:
        - gateways:
            - egressgateway-mtls-router-executor-unver
          port: ${router-executor.ose.istio.egress.common.internal-port}
      route:
        - destination:
            host: ${router-executor.ose.istio.egress.common.nlb_mm-host}
            port:
              number: ${router-executor.ose.istio.egress.common.nlb_mm-port}
          headers:
            request:
              remove:
                - x-envoy-peer-metadata
          weight: 100
      retries:
        attempts: 0
